# MyCPlusPlusLearning

./: .gitignore  CMakeLists.txt  README.md  scriptBuild.sh  setupScript.sh
Plot_Stuff/: firstPlot.cpp
onnxRuntimeCPlusPlus/: buildRuntime.txt
pointers/: pointerWithFunction.cpp  simplePointers.cpp  temp
pythonBinding/: CMakeLists.txt  buildScript.sh  example.cpp  pythonFile.py
tensorsC++/: 1dtensor.cpp  multiDimensionalTensors.cpp
